--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Chen Sun"
-description              : "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ornare aliquet ipsum, ac tempus justo dapibus sit amet. "
+description              : --------------
 repository               : "Chan-Sun/Chan-Sun.github.io"
 google_scholar_stats_use_cdn : true
 
