--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,8 @@ main:
   - title: "Educations"
     url: "/#-educations"
 
+  - title: "CV"
+    url: "../files/CV sun chen.pdf"
   # - title: "Invited Talks"
   #   url: "/#-invited-talks"
 
