--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,6 +3,9 @@ main:
   - title: "About Me"
     url: "/#about-me"
 
+  - title: "CV"
+    url: "../files/CV_chen_sun.pdf"
+
   - title: "News"
     url: "/#-news"
 
@@ -15,8 +18,7 @@ main:
   - title: "Educations"
     url: "/#-educations"
 
-  - title: "CV"
-    url: "../files/CV sun chen.pdf"
+
   # - title: "Invited Talks"
   #   url: "/#-invited-talks"
 
