--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: "/#about-me"
 
   - title: "CV"
-    url: "../files/CV_Chen_Sun.pdf"
+    url: "../files/CV_Yunkang_CAO.pdf"
 
   - title: "News"
     url: "/#-news"
