--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   location         : "Hubei, China"
   employer         :
   pubmed           : 
-  # googlescholar    : "https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"
+  googlescholar    : "https://scholar.google.com/citations?user=aLJ8_G4AAAAJ&hl=zh-CN"
   email            : "caoyunkang0207@gmail.com"
   researchgate     :  "https://www.researchgate.net/profile/Yunkang-Cao"
   uri              :
