--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,8 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Yunkang CAO"
   avatar           : "images/profile.png"
-  bio              : "Huazhong University of Science and Technology"
-  location         : "Hubei, China"
+  bio              : "Hunan University"
+  location         : "Hunan, China"
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=aLJ8_G4AAAAJ&hl=zh-CN"
